--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/main.css" type="text/css" />
+		<link rel="stylesheet" href="assets/css/device-mockups.min.css" type="text/css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 		<link rel="apple-touch-icon" sizes="57x57" href="apple-icon-57x57.png">
@@ -47,7 +48,19 @@
 						<li><a href="#one" class="button icon fa-chevron-down scrolly">Learn More</a></li>
 					</ul>
 				</div>
-				<div class="image phone"><div class="inner"><div style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://www.youtube.com/embed/videoseries?list=PLF-mp9KWPFqNNgcecGRhZsujrL9yRDaOH&amp;ecver=2&rel=0&autoplay=1" width="640" height="360" frameborder="0" gesture="media" allow="encrypted-media" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe></div><!--<img src="images/screen.jpg" alt="" />--></div></div>
+				<div class="device-wrapper">
+  <div class="device" data-device="MacbookPro" data-orientation="portrait" data-color="black">
+    <div class="screen">
+      <!-- PUT CONTENTS HERE -->
+			<div style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://www.youtube.com/embed/videoseries?list=PLF-mp9KWPFqNNgcecGRhZsujrL9yRDaOH&amp;ecver=2&rel=0&autoplay=1&loop=1&controls=0" width="640" height="360" frameborder="0" gesture="media" allow="encrypted-media" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe>
+    </div>
+    <div class="button">
+      <!-- You can hook the "home button" to some JavaScript events or just remove it -->
+    </div>
+  </div>
+</div>
+
+				<!--<div class="image phone"><img src="images/screen.jpg" alt="" /></div></div>-->
 			</header>
 
 		<!-- One -->
