--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 						<li><a href="#one" class="button icon fa-chevron-down scrolly">Learn More</a></li>
 					</ul>
 				</div>
-				<div class="device-wrapper">
+				<div class="device-wrapper"     style="max-width: 600px;">
   <div class="device" data-device="MacbookPro" data-orientation="portrait" data-color="black">
     <div class="screen">
       <!-- PUT CONTENTS HERE -->
