--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="content">
-					<h1><a href="#">quapr</a></h1>
-					<p>Just a simple, single page responsive<br />
+					<h1><img src="images/quapr-square.png" style="max-width:225px;"/></h1>
+					<!--<p>Just a simple, single page responsive<br />
 					template brought to you by <a href="http://html5up.net">HTML5 UP</a></p>
 					<ul class="actions">
 						<li><a href="#" class="button special icon fa-download">Download</a></li>
 						<li><a href="#one" class="button icon fa-chevron-down scrolly">Learn More</a></li>
-					</ul>
+					</ul>-->
 				</div>
-				<div class="device-wrapper"     style="max-width: 600px;">
+				<div class="device-wrapper"   style="max-width: 600px;">
   <div class="device" data-device="MacbookPro" data-orientation="portrait" data-color="black">
     <div class="screen">
       <!-- PUT CONTENTS HERE -->
