--- a/index.html
+++ b/index.html
@@ -34,13 +34,24 @@
 		<meta name="msapplication-TileColor" content="#ffffff">
 		<meta name="msapplication-TileImage" content="ms-icon-144x144.png">
 		<meta name="theme-color" content="#ffffff">
+
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-43112444-22"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'UA-43112444-22');
+		</script>
+
 	</head>
 	<body id="top">
 
 		<!-- Header -->
 			<header id="header">
 				<div class="content">
-					<h1><img src="images/quapr-square.png" style="max-width:225px;"/></h1>
+					<h1><img src="images/quapr-square.png" style="max-width:225px;margin-top: 7.5%;"/></h1>
 					<!--<p>Just a simple, single page responsive<br />
 					template brought to you by <a href="http://html5up.net">HTML5 UP</a></p>
 					<ul class="actions">
@@ -52,7 +63,7 @@
   <div class="device" data-device="MacbookPro" data-orientation="portrait" data-color="black">
     <div class="screen">
       <!-- PUT CONTENTS HERE -->
-			<div style="position:relative;height:0;padding-bottom:56.25%"><iframe src="https://www.youtube.com/embed/videoseries?list=PLF-mp9KWPFqNNgcecGRhZsujrL9yRDaOH&amp;ecver=2&rel=0&autoplay=1&loop=1&controls=1" width="640" height="360" frameborder="0" gesture="media" allow="encrypted-media" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe>
+			<div style="position:relative;height:0;padding-bottom:56.25%;margin-top: 3%;"><iframe src="https://www.youtube.com/embed/videoseries?list=PLF-mp9KWPFqNNgcecGRhZsujrL9yRDaOH&amp;ecver=2&rel=0&autoplay=1&loop=1&controls=1" width="640" height="360" frameborder="0" gesture="media" allow="encrypted-media" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe>
     </div>
     <div class="button">
       <!-- You can hook the "home button" to some JavaScript events or just remove it -->
@@ -66,14 +77,16 @@
 		<!-- One -->
 			<section id="one" class="wrapper style2 special">
 				<header class="major">
-					<h2>Sed ipsum magna lorem tempus amet<br />
-					vehicula et gravida elementum</h2>
+					<h2>{quapr Description}</h2>
 				</header>
 				<ul class="icons major">
 					<li><span class="icon fa-camera-retro"><span class="label">Shoot</span></span></li>
 					<li><span class="icon fa-refresh"><span class="label">Process</span></span></li>
 					<li><span class="icon fa-cloud"><span class="label">Upload</span></span></li>
 				</ul>
+				<footer>
+					<h2>{quapr mailchimp signup}</h2>
+				</footer>
 			</section>
 
 		<!-- Two -->
@@ -126,7 +139,7 @@
 			</section>
 
 		<!-- Four -->
-		<!--
+
 			<section id="four" class="wrapper">
 				<div class="inner">
 
@@ -444,15 +457,15 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				</div>
 			</section>
-		-->
+
 
 		<!-- Footer -->
 			<footer id="footer">
 				<ul class="icons">
-					<li><a href="#" class="icon fa-youtube" target="_blank"><span class="label">YouTube</span></a></li>
+					<li><a href="https://www.youtube.com/channel/UCyQuCBxAgcgQyT4FpqkJl2A" class="icon fa-youtube" target="_blank"><span class="label">YouTube</span></a></li>
 					<li><a href="https://www.facebook.com/quaprquap" class="icon fa-facebook" target="_blank"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
+					<li><a href="https://www.twitter.com/@Quap_Quap" class="icon fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
+					<li><a href="https://www.instagram.com/quapr_quap/" class="icon fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
 				</ul>
 				<p class="copyright">&copy; quapr</p>
 			</footer>
