--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 				</div>
 				<div class="device-wrapper"   style="max-width: 600px;">
   <div class="device" data-device="MacbookPro" data-orientation="portrait" data-color="black">
-    <div class="screen">
+    <div class="screen" style="pointer-events:all;">
       <!-- PUT CONTENTS HERE -->
-			<div style="position:relative;height:0;padding-bottom:56.25%;margin-top: 3%;"><iframe src="https://www.youtube.com/embed/videoseries?list=PLF-mp9KWPFqNNgcecGRhZsujrL9yRDaOH&amp;ecver=2&rel=0&autoplay=1&loop=1&controls=1" width="640" height="360" frameborder="0" gesture="media" allow="encrypted-media" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe>
+			<div style="position:relative;height:0;padding-bottom:56.25%;margin-top: 3%;"><iframe src="https://www.youtube.com/embed/videoseries?list=PLF-mp9KWPFqNNgcecGRhZsujrL9yRDaOH&amp;ecver=2&rel=0&autoplay=1&loop=1&controls=1" width="640" height="360" frameborder="0" gesture="media" allow="encrypted-media" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe></div>
     </div>
     <div class="button">
       <!-- You can hook the "home button" to some JavaScript events or just remove it -->
@@ -74,7 +74,7 @@
 				<!--<div class="image phone"><img src="images/screen.jpg" alt="" /></div></div>-->
 			</header>
 
-		<!-- One -->
+<!--
 			<section id="one" class="wrapper style2 special">
 				<header class="major">
 					<h2>{quapr Description}</h2>
@@ -89,7 +89,6 @@
 				</footer>
 			</section>
 
-		<!-- Two -->
 			<section id="two" class="wrapper">
 				<div class="inner alt">
 					<section class="spotlight">
@@ -125,7 +124,6 @@
 				</div>
 			</section>
 
-		<!-- Three -->
 			<section id="three" class="wrapper style2 special">
 				<header class="major">
 					<h2>Magna leo sapien gravida</h2>
@@ -137,8 +135,6 @@
 					<li><a href="#" class="button">Learn More</a></li>
 				</ul>
 			</section>
-
-		<!-- Four -->
 
 			<section id="four" class="wrapper">
 				<div class="inner">
@@ -457,7 +453,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				</div>
 			</section>
-
+-->
 
 		<!-- Footer -->
 			<footer id="footer">
