--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <div class="device" data-device="MacbookPro" data-orientation="portrait" data-color="black">
     <div class="screen" style="pointer-events:all;">
       <!-- PUT CONTENTS HERE -->
-			<div style="position:relative;height:0;padding-bottom:56.25%;margin-top: 3%;"><iframe src="https://www.youtube.com/embed/videoseries?list=PLF-mp9KWPFqNNgcecGRhZsujrL9yRDaOH&amp;ecver=2&rel=0&autoplay=1&loop=1&controls=1" width="640" height="360" frameborder="0" gesture="media" allow="encrypted-media" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe></div>
+			<div style="position:relative;height:0;padding-bottom:56.25%;margin-top: 3%;"><iframe src="https://www.youtube.com/embed/videoseries?list=PLF-mp9KWPFqNNgcecGRhZsujrL9yRDaOH&amp;ecver=2&rel=0&autoplay=1&loop=1&controls=1&playsinline=1" width="640" height="360" frameborder="0" gesture="media" allow="encrypted-media" style="position:absolute;width:100%;height:100%;left:0" allowfullscreen></iframe></div>
     </div>
     <div class="button">
       <!-- You can hook the "home button" to some JavaScript events or just remove it -->
