--- a/index.html
+++ b/index.html
@@ -74,21 +74,56 @@
 				<!--<div class="image phone"><img src="images/screen.jpg" alt="" /></div></div>-->
 			</header>
 
-<!--
+
 			<section id="one" class="wrapper style2 special">
 				<header class="major">
-					<h2>{quapr Description}</h2>
+					<h2>quaps are short, succinct and satisfing clips of videos using AI.</h2>
 				</header>
 				<ul class="icons major">
-					<li><span class="icon fa-camera-retro"><span class="label">Shoot</span></span></li>
-					<li><span class="icon fa-refresh"><span class="label">Process</span></span></li>
-					<li><span class="icon fa-cloud"><span class="label">Upload</span></span></li>
+					<li><h1 style="font-size:2.8em">🐥</h1></li>
 				</ul>
 				<footer>
-					<h2>{quapr mailchimp signup}</h2>
+					<h2>want to be a quapr too? sign-up to our mailing list for launch updates!</h2>
+					<!-- Begin MailChimp Signup Form -->
+					<div id="mc_embed_signup">
+					<form action="https://quapr.us17.list-manage.com/subscribe/post?u=08b6335634339ced6a0f29884&amp;id=479f5cedf8" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+					    <div id="mc_embed_signup_scroll">
+						<style>
+						input::-webkit-input-placeholder {
+						color: black !important;
+						}
+
+						input:-moz-placeholder { /* Firefox 18- */
+						color: black !important;
+						}
+
+						input::-moz-placeholder {  /* Firefox 19+ */
+						color: black !important;
+						}
+
+						input:-ms-input-placeholder {
+						color: black !important;  
+						}
+						</style>
+					<div class="mc-field-group">
+						<label for="mce-EMAIL" style="display:none;">Email Address </label>
+						<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="email address" style="display:inline; width:50%;">
+						<input type="submit" value="quap me" name="subscribe" id="mc-embedded-subscribe" class="button special">
+					</div>
+						<div id="mce-responses" class="clear">
+							<div class="response" id="mce-error-response" style="display:none"></div>
+							<div class="response" id="mce-success-response" style="display:none"></div>
+						</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+					    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_08b6335634339ced6a0f29884_479f5cedf8" tabindex="-1" value=""></div>
+					    <div class="clear"></div>
+					    </div>
+					</form>
+					</div>
+
+					<!--End mc_embed_signup-->
 				</footer>
 			</section>
-
+<!--
 			<section id="two" class="wrapper">
 				<div class="inner alt">
 					<section class="spotlight">
