--- a/index.html
+++ b/index.html
@@ -479,8 +479,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				<ul class="icons">
 					<li><a href="https://www.youtube.com/channel/UCyQuCBxAgcgQyT4FpqkJl2A" class="icon fa-youtube" target="_blank"><span class="label">YouTube</span></a></li>
 					<li><a href="https://www.facebook.com/quaprquap" class="icon fa-facebook" target="_blank"><span class="label">Facebook</span></a></li>
-					<li><a href="https://www.twitter.com/@Quap_Quap" class="icon fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
-					<li><a href="https://www.instagram.com/quapr_quap/" class="icon fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>
+					<!--<li><a href="https://www.twitter.com/@Quap_Quap" class="icon fa-twitter" target="_blank"><span class="label">Twitter</span></a></li>
+					<li><a href="https://www.instagram.com/quapr_quap/" class="icon fa-instagram" target="_blank"><span class="label">Instagram</span></a></li>-->
 				</ul>
 				<p class="copyright">&copy; quapr</p>
 			</footer>
